Portfolio Spacing Fix+ Emails!

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -41,6 +41,7 @@
     font-style: normal;
     font-weight: 400;
     margin-block: 1px;
+    line-height: 1.3em;
 }
 
 .page .section p {
@@ -85,8 +86,18 @@
 @media only screen and (max-width: 900px) {
     .page h1 {
         margin-left: 0;
+        margin-bottom: 0;
         font-size: 5rem;
     }
+
+    .page .section h2 {
+        margin-top: 25px;
+    }
+
+    .page .section1 {
+        margin-top: 20px;
+    }
+
     .page .section {
         padding-inline: 0;
         display: flex;
